--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
   "dependencies": {
     "axios": "^0.18.0",
     "babel-preset-react-native": "^2.1.0",
+    "cep-promise": "^3.0.6",
+    "formik": "^1.5.2",
     "react": "16.8.3",
     "react-native": "0.59.4",
+    "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.1.0",
+    "react-native-material-textfield": "^0.12.0",
+    "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.8.1",
     "react-redux": "^7.0.2",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "yup": "^0.27.0"
   },
   "devDependencies": {
     "@babel/core": "7.4.3",
