--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.3.4",
     "axios": "^0.18.0",
     "babel-preset-react-native": "^2.1.0",
     "cep-promise": "^3.0.6",
     "formik": "^1.5.2",
     "react": "16.8.3",
     "react-native": "0.59.4",
+    "react-native-config": "^0.11.7",
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-material-textfield": "^0.12.0",
@@ -36,7 +38,8 @@
     "eslint-plugin-react": "^7.12.4",
     "jest": "24.7.1",
     "metro-react-native-babel-preset": "0.53.1",
-    "react-test-renderer": "16.8.3"
+    "react-test-renderer": "16.8.3",
+    "reactotron-react-native": "^3.4.0"
   },
   "jest": {
     "preset": "react-native"
