--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-material-textfield": "^0.12.0",
+    "react-native-modal": "^10.0.0",
     "react-native-paper": "^2.15.2",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.8.1",
