--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-native-config": "^0.11.7",
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.1.0",
+    "react-native-image-picker": "^0.28.1",
+    "react-native-keyboard-aware-scroll-view": "^0.8.0",
     "react-native-material-textfield": "^0.12.0",
     "react-native-modal": "^10.0.0",
     "react-native-paper": "^2.15.2",
