--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.3.4",
+    "@shoutem/ui": "^0.23.20",
     "axios": "^0.18.0",
     "babel-preset-react-native": "^2.1.0",
     "cep-promise": "^3.0.6",
     "formik": "^1.5.2",
+    "prop-types": "^15.7.2",
     "react": "16.8.3",
     "react-native": "0.59.4",
+    "react-native-action-button": "^2.8.5",
     "react-native-config": "^0.11.7",
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.1.0",
@@ -21,6 +24,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
     "react-native-material-textfield": "^0.12.0",
     "react-native-modal": "^10.0.0",
+    "react-native-modal-selector": "^1.0.3",
     "react-native-paper": "^2.15.2",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.8.1",
