--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-action-button": "^2.8.5",
     "react-native-config": "^0.11.7",
     "react-native-elements": "^1.1.0",
+    "react-native-geocoding": "^0.3.0",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-image-picker": "^0.28.1",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
