--- a/package.json
+++ b/package.json
@@ -9,30 +9,60 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.3.4",
     "@shoutem/ui": "^0.23.20",
+    "@tradle/react-native-http": "^2.0.1",
+    "assert": "^1.5.0",
     "axios": "^0.18.0",
     "babel-preset-react-native": "^2.1.0",
+    "browserify-zlib": "^0.1.4",
+    "buffer": "^4.9.1",
     "cep-promise": "^3.0.6",
+    "console-browserify": "^1.1.0",
+    "constants-browserify": "^1.0.0",
+    "dns.js": "^1.0.1",
+    "domain-browser": "^1.2.0",
     "formik": "^1.5.2",
+    "https-browserify": "0.0.1",
+    "path-browserify": "0.0.0",
+    "process": "^0.11.10",
     "prop-types": "^15.7.2",
+    "punycode": "^1.4.1",
+    "querystring-es3": "^0.2.1",
     "react": "16.8.3",
     "react-native": "0.59.4",
     "react-native-action-button": "^2.8.5",
     "react-native-config": "^0.11.7",
+    "react-native-crypto": "^2.1.2",
     "react-native-elements": "^1.1.0",
     "react-native-geocoding": "^0.3.0",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-image-picker": "^0.28.1",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
+    "react-native-level-fs": "^3.0.1",
     "react-native-material-textfield": "^0.12.0",
     "react-native-modal": "^10.0.0",
     "react-native-modal-selector": "^1.0.3",
+    "react-native-os": "^1.2.2",
     "react-native-paper": "^2.15.2",
+    "react-native-qrcode": "^0.2.7",
+    "react-native-randombytes": "^3.5.3",
+    "react-native-tcp": "^3.3.0",
+    "react-native-udp": "^2.6.0",
+    "react-native-uuid": "^1.4.9",
+    "react-native-uuid-generator": "^5.0.0",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.8.1",
     "react-navigation-material-bottom-tabs": "^1.0.0",
     "react-redux": "^7.0.2",
+    "readable-stream": "^1.0.33",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "stream-browserify": "^1.0.0",
+    "string_decoder": "^0.10.31",
+    "timers-browserify": "^1.4.2",
+    "tty-browserify": "0.0.0",
+    "url": "^0.10.3",
+    "util": "^0.10.4",
+    "vm-browserify": "0.0.4",
     "yup": "^0.27.0"
   },
   "devDependencies": {
@@ -49,9 +79,62 @@
     "jest": "24.7.1",
     "metro-react-native-babel-preset": "0.53.1",
     "react-test-renderer": "16.8.3",
-    "reactotron-react-native": "^3.4.0"
+    "reactotron-react-native": "^3.4.0",
+    "rn-nodeify": "github:tradle/rn-nodeify"
   },
   "jest": {
     "preset": "react-native"
+  },
+  "react-native": {
+    "zlib": "browserify-zlib",
+    "console": "console-browserify",
+    "constants": "constants-browserify",
+    "crypto": "react-native-crypto",
+    "dns": "dns.js",
+    "net": "react-native-tcp",
+    "domain": "domain-browser",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "os": "react-native-os",
+    "path": "path-browserify",
+    "querystring": "querystring-es3",
+    "fs": "react-native-level-fs",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "dgram": "react-native-udp",
+    "stream": "stream-browserify",
+    "timers": "timers-browserify",
+    "tty": "tty-browserify",
+    "vm": "vm-browserify",
+    "tls": false
+  },
+  "browser": {
+    "zlib": "browserify-zlib",
+    "console": "console-browserify",
+    "constants": "constants-browserify",
+    "crypto": "react-native-crypto",
+    "dns": "dns.js",
+    "net": "react-native-tcp",
+    "domain": "domain-browser",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "os": "react-native-os",
+    "path": "path-browserify",
+    "querystring": "querystring-es3",
+    "fs": "react-native-level-fs",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "dgram": "react-native-udp",
+    "stream": "stream-browserify",
+    "timers": "timers-browserify",
+    "tty": "tty-browserify",
+    "vm": "vm-browserify",
+    "tls": false
   }
 }
