--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "domain-browser": "^1.2.0",
     "formik": "^1.5.2",
     "https-browserify": "0.0.1",
+    "native-base": "^2.12.1",
     "path-browserify": "0.0.0",
     "process": "^0.11.10",
     "prop-types": "^15.7.2",
