--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-action-button": "^2.8.5",
     "react-native-config": "^0.11.7",
     "react-native-crypto": "^2.1.2",
+    "react-native-easy-toast": "^1.2.0",
     "react-native-elements": "^1.1.0",
     "react-native-geocoding": "^0.3.0",
     "react-native-gesture-handler": "^1.1.0",
@@ -56,6 +57,7 @@
     "readable-stream": "^1.0.33",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.2.0",
     "stream-browserify": "^1.0.0",
     "string_decoder": "^0.10.31",
     "timers-browserify": "^1.4.2",
